--- a/rules.html
+++ b/rules.html
@@ -2,88 +2,69 @@
 <html lang="en">
 
 <head>
+    <link rel="canonical" href="https://bsrp.glitch.me/" />
+    <meta name="description" content="BSRP RolePlay" />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:title" content="BSRP Fivem Server" />
+    <meta property="og:type" content="site" />
+    <meta property="og:url" content="https://bsrp.glitch.me/" />
+    <meta property="og:description" content="BSRP RolePlay" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/41019610?v=4" />
+    <meta name="twitter:card" content="summary" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Rules - BSRP</title>
+    <title>BSRP - BaconSpaceRP</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://baconspacerp.github.io/bootstrap.min.css">
     <!-- FontAwesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-        /* Custom rules styles */
-        body {
-            background-color: #000;
-            color: #fff;
-            font-family: "Arial", sans-serif;
-            text-align: center;
+        /* Customizing the navbar color */
+        nav {
+            background-color: lightblue;
         }
 
-        .container {
-            padding: 50px;
+        /* Adjust the container padding for small screens */
+        @media (max-width: 576px) {
+            .container {
+                padding: 20px;
+            }
         }
 
-        h2 {
-            font-size: 36px;
-            border-bottom: 2px solid #3ea2ff;
-            padding-bottom: 10px;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        li {
-            font-size: 18px;
-            line-height: 1.6;
-            margin-bottom: 10px;
-        }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="https://baconspacerp.github.io/index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/jobs/index.html">Jobs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/project/index.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/server_info.html">Server Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/rules.html">Server Rules</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/character/index.html">Character</a>
-                    </li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/jobs/index.html">Jobs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/project/index.html">Projects</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <!-- Main Content for the Server Rules Page -->
-    <div class="container">
-        <h2>Server Rules</h2>
-        <ul>
-            <li>Rule 1: Follow all server rules and guidelines.</li>
-            <li>Rule 2: Respect other players and staff members.</li>
-            <li>Rule 3: No hacking, cheating, or exploiting bugs.</li>
-            <li>Rule 4: Use appropriate language and behavior.</li>
-            <!-- Add more rules here as needed -->
-        </ul>
+    <!-- Main Content -->
+    <div class="container mt-3">
+        <h1>Welcome to BaconSpaceRP!</h1>
+        <p>Your FiveM Roleplay Server</p>
+
+     <p>>Welcome to BSRP FreeRoam! We have room for all kinds of work. Reality available, exclusive homes, cars and custom sounds,   we promise you that you are going to enjoy every moment with us.
+                        We will make sure to provide you with the best experience. Thank you for taking part with us on the server</p>
     </div>
 
     <!-- Bootstrap JavaScript -->
