--- a/server_info.html
+++ b/server_info.html
@@ -32,6 +32,7 @@
             font-size: 18px;
             line-height: 1.6;
         }
+
     </style>
 </head>
 
@@ -39,32 +40,37 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://baconspacerp.github.io/index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/about.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/jobs/index.html">Jobs</a>
+                        <a class="nav-link" href="/jobs/index.html">Jobs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/project/index.html">Projects</a>
+                        <a class="nav-link" href="/project/index.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/server_info.html">Server Info</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/character/index.html">Character</a>
+                        <a class="nav-link" href="server_info.html">Server Info</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- Main Content for the Server Info Page -->
+    <div class="container">
+        <h2>Server Information</h2>
+        <p>Server Name: BSRP</p>
+        <p>Server IP: SoonTM</p>
+        <p>Server Port: SoonTM</p>
+        <p>Server Rules: <a href="#">View Rules</a></p>
+        <!-- Add more server information here as needed -->
+    </div>
     <!-- Main Content for the Server Info Page -->
     <div class="container">
         <h2>Server Information</h2>
