--- a/jobs/index.html
+++ b/jobs/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://baconspacerp.github.io/bootstrap.min.css">
+  <link rel="stylesheet" href="https://BSRPFreeRoam.github.io/bootstrap.min.css">
   <title>BSRP - Jobs</title>
   <style>
     /* Add your custom styles here */
@@ -13,11 +13,12 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://baconspacerp.github.io/index.html">Home</a>
-    <a class="navbar-brand" href="https://baconspacerp.github.io/about.html">About</a>
-    <a class="navbar-brand" href="https://baconspacerp.github.io/jobs/index.html">Jobs</a>
+    <a class="navbar-brand" href="/index.html">Home</a>
+    <a class="navbar-brand" href="/about.html">About</a>
+    <a class="navbar-brand" href="/jobs/index.html">Jobs</a>
   </div>
 </nav>
+
 
 <div class="container mt-5">
   <h1 class="text-center mb-4">BSRP - Jobs</h1>
@@ -35,7 +36,7 @@
       const jobListElement = document.getElementById('jobList');
 
       try {
-        const response = await fetch('https://baconspacerp.github.io/jobs/jobs.json');
+        const response = await fetch('https://BSRPFreeRoam.github.io/jobs/jobs.json');
         if (!response.ok) {
           throw new Error('Failed to fetch job data');
         }
