--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="https://baconspacerp.github.io/index.html">Home</a>
+            <a class="navbar-brand" href="index.html">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,10 +48,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/about.html">About</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://baconspacerp.github.io/jobs/index.html">Jobs</a>
+                        <a class="nav-link" href="./jobs/index.html">Jobs</a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +67,7 @@
     </div>
 
     <!-- Discord Widget -->
-    <iframe src="https://discord.com/widget?id=503650270329438208&theme=dark" width="350" height="500"
+    <iframe src="https://discord.com/widget?id=1256858643370868747&theme=dark" width="350" height="500"
         allowtransparency="true" frameborder="0"
         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
