--- a/jobs/index.html
+++ b/jobs/index.html
@@ -51,6 +51,7 @@
           <div class="mb-3">
             <h3>${job.title}</h3>
             <p>Department: <span class="badge bg-${job.badgeColor}">${job.department}</span></p>
+            <p>PostalCode: <span class="badge bg-${job.badgeColor}">${job.postal}</span></p>
           </div>
         `).join('');
 
