--- a/jobs/index.html
+++ b/jobs/index.html
@@ -47,13 +47,16 @@
           return;
         }
 
-        const jobsHTML = jobsData.map((job) => `
-          <div class="mb-3">
-            <h3>${job.title}</h3>
-            <p>Department: <span class="badge bg-${job.badgeColor}">${job.department}</span></p>
-            <p>PostalCode: <span class="badge bg-${job.badgeColor}">${job.postal}</span></p>
-          </div>
-        `).join('');
+        const jobsHTML = jobsData.map((job) => {
+          const postalCodes = job.PostalCodes.join(', ');  // Join postal codes with a comma
+          return `
+            <div class="mb-3">
+              <h3>${job.title}</h3>
+              <p>Department: <span class="badge bg-${job.badgeColor}">${job.department}</span></p>
+              <p>Postal Codes: <span class="badge bg-${job.badgeColor}">${postalCodes}</span></p>
+            </div>
+          `;
+        }).join('');
 
         jobListElement.innerHTML = jobsHTML;
       } catch (error) {
