--- a/jobs/index.html
+++ b/jobs/index.html
@@ -21,7 +21,7 @@
 
 
 <div class="container mt-5">
-  <h1 class="text-center mb-4">BSRP - Jobs</h1>
+  <h1 class="text-center mb-4">BSRP - Jobs & Places</h1>
 
   <!-- Job list -->
   <div id="jobList" class="mb-4"></div>
