--- a/jobs/index.html
+++ b/jobs/index.html
@@ -47,7 +47,7 @@
       const jobListElement = document.getElementById('jobList');
 
       try {
-        const response = await fetch('./jobs/jobs.json');
+        const response = await fetch('https://bsrpfreeroam.github.io/jobs/jobs.json');
         if (!response.ok) {
           throw new Error('Failed to fetch job data');
         }
