--- a/pn/index.html
+++ b/pn/index.html
@@ -16,7 +16,25 @@
     href="https://unpkg.com/aos@2.3.4/dist/aos.css"
     rel="stylesheet"
   >
+<!-- Primary Meta Tags -->
+<meta name="title" content="Penal Code " />
+<meta name="description" content="The Penal Code Search System is a web-based application designed to provide an easily searchable list of offenses based on a set of penal codes. This tool allows users to search and filter through a database of legal offenses by their title, ID, or description. " />
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="" />
+<meta property="og:title" content="Penal Code " />
+<meta property="og:description" content="The Penal Code Search System is a web-based application designed to provide an easily searchable list of offenses based on a set of penal codes. This tool allows users to search and filter through a database of legal offenses by their title, ID, or description. " />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="" />
+<meta property="twitter:title" content="Penal Code " />
+<meta property="twitter:description" content="The Penal Code Search System is a web-based application designed to provide an easily searchable list of offenses based on a set of penal codes. This tool allows users to search and filter through a database of legal offenses by their title, ID, or description. " />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   <style>
     body {
       background-color: #f8f9fa;
