--- a/index.html
+++ b/index.html
@@ -616,15 +616,15 @@
                         <p>We will make sure to provide you with the best experience. Thank you for taking part with us on the server.</p>
                         <div class="server-stats d-flex justify-content-center mt-4">
                             <div class="mx-3 text-center">
-                                <h4><i class="fas fa-users"></i> 100+</h4>
-                                <p>Active Players</p>
+                                <h4><i class="fas fa-users"></i> 10+</h4>
+                                <p> Player slot</p>
                             </div>
                             <div class="mx-3 text-center">
-                                <h4><i class="fas fa-briefcase"></i> 20+</h4>
+                                <h4><i class="fas fa-briefcase"></i> 40+</h4>
                                 <p>Unique Jobs</p>
                             </div>
                             <div class="mx-3 text-center">
-                                <h4><i class="fas fa-car"></i> 150+</h4>
+                                <h4><i class="fas fa-car"></i> 942+</h4>
                                 <p>Custom Vehicles</p>
                             </div>
                         </div>
@@ -681,23 +681,9 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <hr class="bg-light">
-            <div class="text-center">
-                <p>&copy; 2025 BaconSpaceRP. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+  
+
+
 
     <!-- Bootstrap JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
