--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://baconspacerp.github.io/bootstrap.min.css">
     <!-- FontAwesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <style>
         :root {
             --primary-color: #2b2d42;
@@ -282,7 +282,7 @@
                         <div class="server-stats d-flex justify-content-center mt-4">
                             <div class="mx-3 text-center">
                                 <h4><i class="fas fa-users"></i> 10+</h4>
-                                <p> Player slot</p>
+                                <p>Player Slots</p>
                             </div>
                             <div class="mx-3 text-center">
                                 <h4><i class="fas fa-briefcase"></i> 40+</h4>
@@ -306,7 +306,7 @@
                 <div class="cta-section p-5 bg-primary text-white rounded shadow">
                     <h2>Ready to Start Your Journey?</h2>
                     <p class="lead mb-4">Join our Discord community and connect with other players!</p>
-                    <a href="#" class="btn btn-light btn-lg"><i class="fab fa-discord"></i> Join Our Discord</a>
+                    <a href="#" class="btn btn-light btn-lg"><i class="fab fa-discord"></i> Join Our Discord</a>                  <a href="#" class="btn btn-light btn-lg"><i class="fab fa-guilded"></i> Join Our Guilded</a>
                 </div>
             </div>
         </div>
@@ -333,9 +333,10 @@
                     <h5>Connect With Us</h5>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-discord"></i></a>
+                        <a href="#"><i class="fab fa-guilded"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-threads"></i></a>
+                        <a href="#"><i class="fab fa-bluesky"></i></a>
                     </div>
                 </div>
             </div>
