--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <div class="cta-section p-5 bg-primary text-white rounded shadow">
                     <h2>Ready to Start Your Journey?</h2>
                     <p class="lead mb-4">Join our Discord community and connect with other players!</p>
-                    <a href="https://discord.gg/WBBYzR8mht" class="btn btn-light btn-lg"><i class="fab fa-discord"></i> Join Our Discord</a>                  <a href="https://www.guilded.gg/bsrp" class="btn btn-warning btn-lg"><i class="fab fa-guilded"></i> Join Our Guilded</a>
+                    <a href="https://discord.gg/WBBYzR8mht" class="btn btn-light btn-lg" id="discordButton"><i class="fab fa-discord"></i> Join Our Discord</a>                  <a href="https://www.guilded.gg/bsrp" class="btn btn-warning btn-lg"><i class="fab fa-guilded"></i> Join Our Guilded</a>
                 </div>
             </div>
         </div>
@@ -332,7 +332,7 @@
                 <div class="col-md-3">
                     <h5>Connect With Us</h5>
                     <div class="social-icons">
-                        <a href="https://discord.gg/WBBYzR8mht"><i class="fab fa-discord"></i></a>
+                        <a href="https://discord.gg/WBBYzR8mht" id="discordButton"><i class="fab fa-discord"></i></a>
                         <a href="https://www.guilded.gg/bsrp"><i class="fab fa-guilded"></i></a>
                         <a href="https://www.threads.net/bsrp"><i class="fab fa-threads"></i></a>
                         <a href="https://bsky.app/profile/bsrp.bsky.social"><i class="fab fa-bluesky"></i></a>
@@ -345,7 +345,23 @@
             </div>
         </div>
     </footer>
-
+<script>
+     // Fetch Discord widget data
+fetch('https://discord.com/api/guilds/1256858643370868747/widget.json')
+    .then(response => response.json())
+    .then(data => {
+        if (data && data.instant_invite) {
+            document.getElementById('discordButton').href = data.instant_invite;
+        } else {
+            // Fallback to a default Discord invite link
+            document.getElementById('discordButton').href = 'https://discord.gg/WBBYzR8mht';
+        }
+    })
+    .catch(error => {
+        console.error('Error fetching Discord data:', error);
+        document.getElementById('discordButton').href = 'https://discord.gg/WBBYzR8mht';
+    });
+</script>
   
 
 
